updated a little bit of stuff
