# internal/handlers/user.go
@@ -1,17 +1,18 @@
 package handlers
 
 import (
-	"github.com/gin-gonic/gin"
 	"auth-api/internal/services"
 	"net/http"
-)
 
+	"github.com/gin-gonic/gin"
+)
 
 // @Summary Create user
 // @Description Create a new user
 // @Tags users
 // @Accept json
 // @Produce json
+// @Param user body services.UserInput true "User input data"
 // @Success 201 {object} string "user created"
 // @Router /api/user [post]
 func CreateUser(c *gin.Context) {
